tests/e2e/semantics/if_require_boolean.error
Error: syntax error in story at line 2, column 4

2|    if arr
         ^^^

E0130: If expression must evaluate to a `boolean`, but is `List[int]`
