tests/e2e/semantics/if_require_boolean.story
arr = [1, 2]
if arr
	a = 0
